Added menu items for accessing website

--- a/gui/src/main/resources/main.fxml
+++ b/gui/src/main/resources/main.fxml
@@ -31,6 +31,8 @@
                         </Menu>
                         <Menu mnemonicParsing="false" text="Help">
                             <items>
+                                <MenuItem fx:id="menuWebsite" mnemonicParsing="false" text="VocabHunter Website" />
+                                <MenuItem fx:id="menuHowTo" mnemonicParsing="false" text="How to Use VocabHunter" />
                                 <MenuItem fx:id="menuAbout" mnemonicParsing="false" text="About" />
                             </items>
                         </Menu>
