--- a/gui/src/main/resources/main.fxml
+++ b/gui/src/main/resources/main.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
+<?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
@@ -40,35 +42,35 @@
                 </MenuBar>
                 <ToolBar>
                     <items>
-                        <Button fx:id="buttonNew" mnemonicParsing="false" styleClass="buttonNew" text="New" >
+                        <Button fx:id="buttonNew" mnemonicParsing="false" styleClass="buttonNew" text="New">
                             <tooltip>
-                                <Tooltip text="Analyse a document and start a new session"/>
+                                <Tooltip text="Analyse a document and start a new session" />
                             </tooltip>
                         </Button>
-                        <Button fx:id="buttonOpen" mnemonicParsing="false" styleClass="buttonOpen" text="Open" >
+                        <Button fx:id="buttonOpen" mnemonicParsing="false" styleClass="buttonOpen" text="Open">
                             <tooltip>
-                                <Tooltip text="Open a saved session"/>
+                                <Tooltip text="Open a saved session" />
                             </tooltip>
                         </Button>
-                        <Button fx:id="buttonSave" mnemonicParsing="false" styleClass="buttonSave" text="Save" >
+                        <Button fx:id="buttonSave" mnemonicParsing="false" styleClass="buttonSave" text="Save">
                             <tooltip>
-                                <Tooltip text="Save the session"/>
+                                <Tooltip text="Save the session" />
                             </tooltip>
                         </Button>
-                        <Button fx:id="buttonExport" mnemonicParsing="false" styleClass="buttonExport" text="Export Selection" >
+                        <Button fx:id="buttonExport" mnemonicParsing="false" styleClass="buttonExport" text="Export Selection">
                             <tooltip>
-                                <Tooltip text="Export the list of words marked as unknown to a file"/>
+                                <Tooltip text="Export the list of words marked as unknown to a file" />
                             </tooltip>
                         </Button>
                         <Separator orientation="VERTICAL" />
-                        <RadioButton fx:id="buttonEditOn" mnemonicParsing="false" text="Select Words" >
+                        <RadioButton fx:id="buttonEditOn" mnemonicParsing="false" text="Select Words">
                             <tooltip>
-                                <Tooltip text="Mark words as known and unknown"/>
+                                <Tooltip text="Mark words as known and unknown" />
                             </tooltip>
                         </RadioButton>
-                        <RadioButton fx:id="buttonEditOff" mnemonicParsing="false" text="Show Selection" >
+                        <RadioButton fx:id="buttonEditOff" mnemonicParsing="false" text="Show Selection">
                             <tooltip>
-                                <Tooltip text="Show a list of all the words marked as unknown"/>
+                                <Tooltip text="Show a list of all the words marked as unknown" />
                             </tooltip>
                         </RadioButton>
                     </items>
@@ -77,16 +79,25 @@
         </VBox>
     </top>
    <center>
-      <HBox alignment="CENTER" BorderPane.alignment="CENTER" styleClass="noSession">
-         <children>
-            <VBox alignment="CENTER_LEFT">
-               <children>
-                   <Label text="There is no session open" styleClass="title" />
-                   <Label text="Choose 'New' to analyse a document and start a new session." styleClass="new" />
-                   <Label text="Choose 'Open' to load a saved session." styleClass="open" />
-               </children>
-            </VBox>
-         </children>
-      </HBox>
+       <VBox alignment="CENTER" styleClass="noSession">
+           <children>
+               <HBox alignment="CENTER">
+                   <children>
+                       <Text styleClass="title,left" text="Vocab"/>
+                       <Text styleClass="title,right" text="Hunter"/>
+                   </children>
+               </HBox>
+               <HBox alignment="CENTER">
+                   <children>
+                       <VBox>
+                           <children>
+                               <Label styleClass="new" text="Choose 'New' to analyse a document and start a new session."/>
+                               <Label styleClass="open" text="Choose 'Open' to load a saved session."/>
+                           </children>
+                       </VBox>
+                   </children>
+               </HBox>
+           </children>
+       </VBox>
    </center>
 </BorderPane>
