--- a/gui/src/main/resources/main.css
+++ b/gui/src/main/resources/main.css
@@ -6,6 +6,7 @@
    -colour-unknown: #FFF0ED;
    -colour-unknown-end: #a43030;
    -gradient-unknown: linear-gradient(from 0% 0% to 100% 200%, repeat, -colour-unknown 0%, -colour-unknown-end 90%);
+   -colour-word-use: darkblue;
 }
 
 .mainWord {
@@ -52,11 +53,11 @@
 }
 .buttonKnown {
     -fx-graphic: url("images/known.png");
-    -fx-base: #EBFFF0;
+    -fx-base: -colour-known;
 }
 .buttonUnknown {
     -fx-graphic: url("images/unknown.png");
-    -fx-base: #FFF0ED;
+    -fx-base: -colour-unknown;
 }
 .buttonUnseen {
     -fx-graphic: url("images/unseen.png");
@@ -98,5 +99,5 @@
 }
 .wordUse {
     -fx-font-weight: bold;
-    -fx-fill: darkblue;
+    -fx-fill: -colour-word-use;
 }
