--- a/gui/src/main/resources/settings.fxml
+++ b/gui/src/main/resources/settings.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
@@ -26,12 +27,15 @@
          <rowConstraints>
             <RowConstraints />
             <RowConstraints />
+            <RowConstraints />
          </rowConstraints>
          <children>
             <Label styleClass="fieldLabel" text="Minimum number of letters in a word:" />
             <TextField fx:id="fieldMinimumLetters" alignment="CENTER_RIGHT" prefColumnCount="4" text="9999" GridPane.columnIndex="1" />
             <Label styleClass="fieldLabel" text="Minimum number of occurrences of a word:" GridPane.rowIndex="1" />
             <TextField fx:id="fieldMinimumOccurrences" alignment="CENTER_RIGHT" prefColumnCount="4" text="9999" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Label styleClass="fieldLabel" text="Include words starting with a capital letter:" GridPane.rowIndex="2" />
+            <CheckBox fx:id="fieldInitialCapital" mnemonicParsing="false" selected="true" GridPane.columnIndex="1" GridPane.rowIndex="2" />
          </children>
       </GridPane>
    </center>
