--- a/gui/src/main/resources/settings.fxml
+++ b/gui/src/main/resources/settings.fxml
@@ -1,43 +1,68 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<!--
+  ~ Open Source Software published under the Apache Licence, Version 2.0.
+  -->
+
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 
-<!--
-  ~ Open Source Software published under the Apache Licence, Version 2.0.
-  -->
-
-<BorderPane styleClass="settings" stylesheets="@main.css" xmlns="http://javafx.com/javafx/8.0.82-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.github.vocabhunter.gui.controller.SettingsController">
+<BorderPane styleClass="settings" stylesheets="@main.css" xmlns="http://javafx.com/javafx/null" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.github.vocabhunter.gui.controller.SettingsController">
    <top>
       <Label styleClass="description" text="Choose the words you want to show" BorderPane.alignment="CENTER" />
    </top>
    <center>
-      <GridPane BorderPane.alignment="CENTER">
-         <columnConstraints>
-            <ColumnConstraints halignment="RIGHT" />
-            <ColumnConstraints />
-         </columnConstraints>
-         <rowConstraints>
-            <RowConstraints />
-            <RowConstraints />
-            <RowConstraints />
-         </rowConstraints>
+      <VBox BorderPane.alignment="CENTER">
          <children>
-            <Label styleClass="fieldLabel" text="Minimum number of letters in a word:" />
-            <TextField fx:id="fieldMinimumLetters" alignment="CENTER_RIGHT" prefColumnCount="4" text="9999" GridPane.columnIndex="1" />
-            <Label styleClass="fieldLabel" text="Minimum number of occurrences of a word:" GridPane.rowIndex="1" />
-            <TextField fx:id="fieldMinimumOccurrences" alignment="CENTER_RIGHT" prefColumnCount="4" text="9999" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <Label styleClass="fieldLabel" text="Include words starting with a capital letter:" GridPane.rowIndex="2" />
-            <CheckBox fx:id="fieldInitialCapital" mnemonicParsing="false" selected="true" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <GridPane alignment="CENTER" styleClass="settingsGroup">
+               <columnConstraints>
+                  <ColumnConstraints halignment="RIGHT" />
+                  <ColumnConstraints />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints />
+                  <RowConstraints />
+                  <RowConstraints />
+               </rowConstraints>
+               <children>
+                  <Label styleClass="fieldLabel" text="Minimum number of letters in a word:" />
+                  <TextField fx:id="fieldMinimumLetters" alignment="CENTER_RIGHT" prefColumnCount="4" text="9999" GridPane.columnIndex="1" />
+                  <Label styleClass="fieldLabel" text="Minimum number of occurrences of a word:" GridPane.rowIndex="1" />
+                  <TextField fx:id="fieldMinimumOccurrences" alignment="CENTER_RIGHT" prefColumnCount="4" text="9999" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Label styleClass="fieldLabel" text="Include words starting with a capital letter:" GridPane.rowIndex="2" />
+                  <CheckBox fx:id="fieldInitialCapital" mnemonicParsing="false" selected="true" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+               </children>
+            </GridPane>
+            <GridPane styleClass="settingsGroup" VBox.vgrow="ALWAYS">
+              <columnConstraints>
+                <ColumnConstraints />
+                <ColumnConstraints />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints />
+                <RowConstraints />
+              </rowConstraints>
+               <children>
+                  <Label styleClass="fieldLabel" text="Word lists to exclude:" GridPane.hgrow="ALWAYS" />
+                  <Button fx:id="buttonAddList" mnemonicParsing="false" text="Add Excluded Word List" GridPane.columnIndex="1" GridPane.halignment="RIGHT" />
+                  <ListView fx:id="listExcludedFiles" prefHeight="150.0" prefWidth="600.0" GridPane.columnSpan="2" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
+                      <placeholder>
+                          <Label text="No lists of excluded words" />
+                      </placeholder>
+                  </ListView>
+               </children>
+            </GridPane>
          </children>
-      </GridPane>
+      </VBox>
    </center>
    <bottom>
        <ButtonBar styleClass="buttonBar" BorderPane.alignment="CENTER">
