--- a/gui/src/main/resources/main.css
+++ b/gui/src/main/resources/main.css
@@ -111,6 +111,12 @@
     -fx-font-size: 20;
     -fx-padding: 7 0 7 0;
 }
+.about .website {
+    -fx-graphic: url("images/home.png");
+}
+.about .twitter {
+    -fx-graphic: url("images/twitter.png");
+}
 .noSession .new {
     -fx-graphic: url("images/buttonNew.png");
     -fx-padding: 10 0 10 5;
