Added the masker pane to make it clear when the system is busy

--- a/gui/src/main/resources/main.css
+++ b/gui/src/main/resources/main.css
@@ -184,3 +184,7 @@
 .chartLegend .keyFiltered {
     -fx-fill: -colour-filtered;
 }
+.masker {
+    -fx-background-color: black;
+    -fx-opacity: 0.3;
+}
