Added a mini progress graph to the status bar

--- a/gui/src/main/resources/main.css
+++ b/gui/src/main/resources/main.css
@@ -188,3 +188,13 @@
     -fx-background-color: black;
     -fx-opacity: 0.3;
 }
+.miniGraph {
+  -fx-control-inner-background: -colour-remaining;
+  -fx-accent: -colour-done;
+}
+.miniGraph .bar {
+    -fx-background-insets: 0;
+}
+.miniGraph .track {
+    -fx-background-insets: 0;
+}
