--- a/gui/src/main/resources/session.fxml
+++ b/gui/src/main/resources/session.fxml
@@ -1,20 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.Tooltip?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-
 <!--
   ~ Open Source Software published under the Apache Licence, Version 2.0.
   -->
 
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <SplitPane fx:id="splitUseList" dividerPositions="0.55" orientation="VERTICAL" prefHeight="500.0" prefWidth="700.0" stylesheets="@main.css" xmlns="http://javafx.com/javafx/8.0.82-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.github.vocabhunter.gui.controller.SessionController">
     <items>
         <AnchorPane>
@@ -39,6 +32,9 @@
                                                     <tooltip>
                                                         <Tooltip text="I don't know this word (press x)" />
                                                     </tooltip>
+                                                    <graphic>
+                                                        <FontAwesomeIconView styleClass="buttonUnknownIcon" />
+                                                    </graphic>
                                                     <HBox.margin>
                                                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                                     </HBox.margin>
@@ -47,6 +43,9 @@
                                                     <tooltip>
                                                         <Tooltip text="I know this word (press k)" />
                                                     </tooltip>
+                                                    <graphic>
+                                                        <FontAwesomeIconView styleClass="buttonKnownIcon" />
+                                                    </graphic>
                                                     <HBox.margin>
                                                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                                     </HBox.margin>
@@ -59,6 +58,9 @@
                                             <tooltip>
                                                 <Tooltip text="Reset word (press r)" />
                                             </tooltip>
+                                            <graphic>
+                                                <FontAwesomeIconView styleClass="buttonUnseenIcon" />
+                                            </graphic>
                                         </Button>
                                     </top>
                                 </BorderPane>
