--- a/gui/src/main/resources/about.fxml
+++ b/gui/src/main/resources/about.fxml
@@ -4,15 +4,10 @@
   ~ Open Source Software published under the Apache Licence, Version 2.0.
   -->
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Hyperlink?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Text?>
-
 <Pane fx:id="aboutDialogue" styleClass="about" stylesheets="@main.css" xmlns="http://javafx.com/javafx/8.0.82-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.github.vocabhunter.gui.controller.AboutController">
     <children>
         <BorderPane>
@@ -33,8 +28,16 @@
                         <Label text="VocabHunter is Open Source Software,&#10;published under the Apache Licence, Version 2.0." />
                         <Label fx:id="labelVersion" text="VocabHunter Version: %s." />
                         <Label text="Copyright (c) 2015 - 2016 Adam Carroll." />
-                        <Hyperlink fx:id="linkWebsite" text="http://vocabhunter.github.io/" styleClass="website" />
-                        <Hyperlink fx:id="linkTwitter" text="\@vocabhunterapp" styleClass="twitter" />
+                        <Hyperlink fx:id="linkWebsite" text="http://vocabhunter.github.io/" styleClass="website" >
+                            <graphic>
+                                <FontAwesomeIconView styleClass="websiteIcon" />
+                            </graphic>
+                        </Hyperlink>
+                        <Hyperlink fx:id="linkTwitter" text="\@vocabhunterapp" styleClass="twitter" >
+                            <graphic>
+                                <FontAwesomeIconView styleClass="twitterIcon" />
+                            </graphic>
+                        </Hyperlink>
                     </children>
                 </VBox>
             </left>
