--- a/gui/src/main/resources/about.fxml
+++ b/gui/src/main/resources/about.fxml
@@ -28,7 +28,7 @@
                         <Label text="VocabHunter is Open Source Software,&#10;published under the Apache Licence, Version 2.0." />
                         <Label fx:id="labelVersion" text="VocabHunter Version: %s." />
                         <Label text="Copyright (c) 2015 - 2016 Adam Carroll." />
-                        <Hyperlink fx:id="linkWebsite" text="http://vocabhunter.github.io/" styleClass="website" >
+                        <Hyperlink fx:id="linkWebsite" text="https://vocabhunter.github.io/" styleClass="website" >
                             <graphic>
                                 <FontAwesomeIconView styleClass="websiteIcon" />
                             </graphic>
