--- a/gui/src/main/resources/session.fxml
+++ b/gui/src/main/resources/session.fxml
@@ -6,79 +6,124 @@
 
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<SplitPane fx:id="splitUseList" dividerPositions="0.55" orientation="VERTICAL" prefHeight="500.0" prefWidth="700.0" stylesheets="@main.css" xmlns="http://javafx.com/javafx/8.0.82-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.github.vocabhunter.gui.controller.SessionController">
-    <items>
-        <AnchorPane>
-            <children>
-                <SplitPane fx:id="splitWordList" dividerPositions="0.65" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                    <items>
-                        <AnchorPane>
-                            <children>
-                                <BorderPane fx:id="mainWordPane" styleClass="mainWordPane" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                    <center>
-                                        <VBox alignment="CENTER">
-                                            <children>
-                                                <Label fx:id="mainWord" styleClass="mainWord" text="Main Word" />
-                                                <Label fx:id="useCountLabel" styleClass="useCount" text="(110 uses)" />
-                                            </children>
-                                        </VBox>
-                                    </center>
-                                    <bottom>
-                                        <HBox alignment="CENTER" BorderPane.alignment="CENTER">
-                                            <children>
-                                                <Button fx:id="buttonUnknown" mnemonicParsing="false" styleClass="buttonUnknown" text="Don't Know">
-                                                    <tooltip>
-                                                        <Tooltip text="I don't know this word (press x)" />
-                                                    </tooltip>
-                                                    <graphic>
-                                                        <FontAwesomeIconView styleClass="buttonUnknownIcon" />
-                                                    </graphic>
-                                                    <HBox.margin>
-                                                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                                    </HBox.margin>
-                                                </Button>
-                                                <Button fx:id="buttonKnown" mnemonicParsing="false" styleClass="buttonKnown" text="Know">
-                                                    <tooltip>
-                                                        <Tooltip text="I know this word (press k)" />
-                                                    </tooltip>
-                                                    <graphic>
-                                                        <FontAwesomeIconView styleClass="buttonKnownIcon" />
-                                                    </graphic>
-                                                    <HBox.margin>
-                                                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                                    </HBox.margin>
-                                                </Button>
-                                            </children>
-                                        </HBox>
-                                    </bottom>
-                                    <top>
-                                        <Button fx:id="buttonUnseen" mnemonicParsing="false" styleClass="buttonUnseen" BorderPane.alignment="TOP_LEFT">
-                                            <tooltip>
-                                                <Tooltip text="Reset word (press r)" />
-                                            </tooltip>
-                                            <graphic>
-                                                <FontAwesomeIconView styleClass="buttonUnseenIcon" />
-                                            </graphic>
-                                        </Button>
-                                    </top>
-                                </BorderPane>
-                            </children>
-                        </AnchorPane>
-                        <AnchorPane>
-                            <children>
-                                <ListView fx:id="wordListView" styleClass="wordList" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                            </children>
-                        </AnchorPane>
-                    </items>
-                </SplitPane>
-            </children>
-        </AnchorPane>
-        <AnchorPane>
-            <children>
-                <ListView fx:id="useListView" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-            </children>
-        </AnchorPane>
-    </items>
-</SplitPane>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.ToolBar?>
+<?import javafx.scene.control.Tooltip?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import org.controlsfx.control.textfield.CustomTextField?>
+
+<BorderPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.github.vocabhunter.gui.controller.SessionController">
+   <top>
+      <ToolBar fx:id="barSearch">
+         <items>
+            <Button fx:id="buttonCloseSearch" mnemonicParsing="false" styleClass="buttonSearchClose">
+                <graphic>
+                    <FontAwesomeIconView styleClass="buttonSearchCloseIcon" />
+                </graphic>
+            </Button>
+            <CustomTextField fx:id="fieldSearch" >
+                <left>
+                    <Label styleClass="searchBoxLabel">
+                        <graphic>
+                            <FontAwesomeIconView styleClass="searchBoxLabelIcon" />
+                        </graphic>
+                    </Label>
+                </left>
+            </CustomTextField>
+             <Button fx:id="buttonSearchUp" mnemonicParsing="false" styleClass="buttonSearchUp">
+                 <graphic>
+                     <FontAwesomeIconView styleClass="buttonSearchUpIcon" />
+                 </graphic>
+             </Button>
+             <Button fx:id="buttonSearchDown" mnemonicParsing="false" styleClass="buttonSearchDown">
+                 <graphic>
+                     <FontAwesomeIconView styleClass="buttonSearchDownIcon" />
+                 </graphic>
+             </Button>
+            <Label fx:id="labelMatches" />
+         </items>
+      </ToolBar>
+   </top>
+   <center>
+      <SplitPane fx:id="splitUseList" dividerPositions="0.55" orientation="VERTICAL" stylesheets="@main.css">
+          <items>
+              <AnchorPane>
+                  <children>
+                      <SplitPane fx:id="splitWordList" dividerPositions="0.65" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                          <items>
+                              <AnchorPane>
+                                  <children>
+                                      <BorderPane fx:id="mainWordPane" styleClass="mainWordPane" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                          <center>
+                                              <VBox alignment="CENTER">
+                                                  <children>
+                                                      <Label fx:id="mainWord" styleClass="mainWord" text="Main Word" />
+                                                      <Label fx:id="useCountLabel" styleClass="useCount" text="(110 uses)" />
+                                                  </children>
+                                              </VBox>
+                                          </center>
+                                          <bottom>
+                                              <HBox alignment="CENTER" BorderPane.alignment="CENTER">
+                                                  <children>
+                                                      <Button fx:id="buttonUnknown" mnemonicParsing="false" styleClass="buttonUnknown" text="Don't Know">
+                                                          <tooltip>
+                                                              <Tooltip text="I don't know this word (press x)" />
+                                                          </tooltip>
+                                                          <graphic>
+                                                              <FontAwesomeIconView styleClass="buttonUnknownIcon" />
+                                                          </graphic>
+                                                          <HBox.margin>
+                                                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                                          </HBox.margin>
+                                                      </Button>
+                                                      <Button fx:id="buttonKnown" mnemonicParsing="false" styleClass="buttonKnown" text="Know">
+                                                          <tooltip>
+                                                              <Tooltip text="I know this word (press k)" />
+                                                          </tooltip>
+                                                          <graphic>
+                                                              <FontAwesomeIconView styleClass="buttonKnownIcon" />
+                                                          </graphic>
+                                                          <HBox.margin>
+                                                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                                          </HBox.margin>
+                                                      </Button>
+                                                  </children>
+                                              </HBox>
+                                          </bottom>
+                                          <top>
+                                              <Button fx:id="buttonUnseen" mnemonicParsing="false" styleClass="buttonUnseen" BorderPane.alignment="TOP_LEFT">
+                                                  <tooltip>
+                                                      <Tooltip text="Reset word (press r)" />
+                                                  </tooltip>
+                                                  <graphic>
+                                                      <FontAwesomeIconView styleClass="buttonUnseenIcon" />
+                                                  </graphic>
+                                              </Button>
+                                          </top>
+                                      </BorderPane>
+                                  </children>
+                              </AnchorPane>
+                              <AnchorPane>
+                                  <children>
+                                      <ListView fx:id="wordListView" styleClass="wordList" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                  </children>
+                              </AnchorPane>
+                          </items>
+                      </SplitPane>
+                  </children>
+              </AnchorPane>
+              <AnchorPane>
+                  <children>
+                      <ListView fx:id="useListView" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                  </children>
+              </AnchorPane>
+          </items>
+      </SplitPane>
+   </center>
+</BorderPane>
