More work on the search functionality

--- a/gui/src/main/resources/main.fxml
+++ b/gui/src/main/resources/main.fxml
@@ -45,16 +45,16 @@
                                             <MenuItem fx:id="menuOpen" accelerator="Shortcut+O" mnemonicParsing="false" text="Open..." />
                                             <MenuItem fx:id="menuSave" accelerator="Shortcut+S" mnemonicParsing="false" text="Save" />
                                             <MenuItem fx:id="menuSaveAs" accelerator="Shift+Shortcut+S" mnemonicParsing="false" text="Save As..." />
-                                            <SeparatorMenuItem mnemonicParsing="false" />
-                                            <MenuItem fx:id="menuFind" accelerator="Shortcut+F" mnemonicParsing="false" text="Find" />
                                         </items>
                                     </Menu>
-                                    <Menu mnemonicParsing="false" text="Selection">
+                                    <Menu mnemonicParsing="false" text="Words">
                                         <items>
                                             <RadioMenuItem fx:id="menuEditOn" mnemonicParsing="false" text="Select Words" />
                                             <RadioMenuItem fx:id="menuEditOff" mnemonicParsing="false" text="Show Selection" />
                                             <SeparatorMenuItem mnemonicParsing="false" />
                                             <MenuItem fx:id="menuExport" accelerator="Shortcut+E" mnemonicParsing="false" text="Export Selection..." />
+                                            <SeparatorMenuItem mnemonicParsing="false" />
+                                            <MenuItem fx:id="menuFind" accelerator="Shortcut+F" mnemonicParsing="false" text="Find" />
                                         </items>
                                     </Menu>
                                     <Menu mnemonicParsing="false" text="Filters">
